# remodel

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  README.md
include/: Platform.hpp  Remodel.hpp  config.hpp  operators.hpp  platform.hpp  remodel.hpp  utils.hpp
testing/: CMakeLists.txt  test.cpp
